2001-11-11  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c:    Fixed a bug in png write, leading to corrupt
			data in vconf and possible segfaults
			Added xga, sxga, uxga as valid options for
			image size on command line
			Added ftp-code from Robert Wessels
			Added individual imagesize (-W and -H on 
			commandline); be careful! These values are not
			checked for valid values! You may damage your
			hardware with wrong values (and a poor driver)

	* v_config.c:   Added xga, sxga, uxga as valid options for
			image size in config file
			Added ftp-code from Robert Wessels
			Added individual imagesize settings (see above)

2001-07-23  Jens Gecius  <jens@gecius.de>

			Release of 0.7.4 without any asm code (should
			keep everybody happy for porting), use of mmap,
			etc. See below for details.

2001-07-22  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c:    Minor Changes, added YUV422 to known routines,
			because with my Philips cam this one looks
			identical to YUV422.
			Reminder: brightness adjust by vgrabbj is OFF
			by default now and -b switches it, BUT you 
			have to have RGB24 selected as input palette!
			Because I switched back from the asm-code to
			pure c-code (portability of the conversion
			functions), and the conversion from YUV420 is
			not exactly what it should look	like, I use a
			different approach: do two conversion, which
			work - at least here at my box. Let me know if
			something goes wrong, I'll try to fix it then.

	* ccvt_c.c: 	Added YUYV (=YUV422?) and YUV420p to the
			conversion routines (I'm getting there, soon
			vgrabbj will be portable again).
			But: YUV420i still gives me odd images...

2001-07-21  Jens Gecius  <jens@gecius.de> (no release - CVS only)

	* vgrabbj.c: 	* Added:
			Added mmap image grabbing as default, if mmap
			fails, vgrabbj falls back to read().
			Added parameter -F to force a specific palette.
			But be aware, if it is not one of vgrabbj's
			supported palettes (RGB32, RGB24, YUYV, YUV420,